--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <title>Mya Money</title>
+        <title>My Money</title>
         <link rel='stylesheet' href="app.css">
     </head>
-    <body class='skink-blue fixed sidebar-mini'>
+    <body class='skin-blue fixed sidebar-mini'>
         <div id="app"></div>
         <script src='app.js'></script>
     </body>
